# pixaris

./: .gcloudignore  .gitignore  AGENTS.md  Makefile  README.md  app.py  app.yaml  assess-quality.ipynb  pyproject.toml
.github/: dependabot.yml
_includes/: head.html  metadata.html
docker/: .gcloudignore  Dockerfile  cloudbuild.yaml
docs/: README.md  conf.py  index.rst  modules.rst  pixaris.data_loaders.rst  pixaris.data_writers.rst  pixaris.feedback_handlers.rst  pixaris.generation.rst  pixaris.rst  pixaris.utils.rst  test.rst
examples/: GCPDatasetLoader_ComfyClusterGenerator_GCPBucketHandler.py  GCPDatasetLoader_ComfyClusterGenerator_GCPBucketWriter.py  GCPDatasetLoader_ComfyGenerator_GCPExperimentHandler.py  GCPDatasetLoader_ComfyGenerator_GCPExperimentHandler_WithMetrics.py  GCPDatasetLoader_ComfyGenerator_GCPTensorboardHandler.py  GCPDatasetLoader_ComfyGenerator_GCPTensorboardWriter.py  GCPDatasetLoader_GeminiGenerator_LocalExperimentHandler.py  HyperparameterSearch_FluxGenerator_GCPTensorboardHandler.py  HyperparameterSearch_FluxGenerator_GCPTensorboardWriter.py  HyperparameterSearch_GCPDasetLoader_FluxGenerator_GCPExperimentHandler.py  HyperparameterSearch_GCPDatasetLoader_ComfyGenerator_GCPTensorboardHandler.py  HyperparameterSearch_GCPDatasetLoader_ComfyGenerator_GCPTensorboardWriter.py  LLMMetrics.py  LocalDatasetLoader_ComfyClusterGenerator_LocalDataWriter.py  LocalDatasetLoader_ComfyGenerator_LocalDataWriter.py  LocalDatasetLoader_ComfyGenerator_LocalExperimentHandler.py  LocalDatasetLoader_ComfyGenerator_LocalExperimentHandler_WithMetrics.py  LocalDatasetLoader_FluxGenerator_LocalDataWriter.py  LocalDatasetLoader_Imagen2Generator_LocalExperimentHandler.py  Multiprocessing_LocalDatasetLoader_FluxGenerator_LocalDataWriter.py  ParallelisedOrchestration_LocalDatasetLoader_FluxGenerator_LocalDataWriter.py  ParallelisedOrchestration_LocalDatasetLoader_FluxGenerator_LocalExperimentHandler.py  README.md  deploy_frontend_locally.py  example_config.yaml  generate_eval_set_against_cluster.py  generate_image_with_whole_eval_set.py  metrics.py  (+9 more)
(+137 files in other folders)
